# openai-to-z-challenge-ai-flow

./: .env.template  .gitignore  README.md  agents.py  captains_log.md  environment.yml  environment_full.yml  pyproject.toml
output_example/-2.5023_-54.6931_Maicá-Ring-Ditch-Cluster_2025-05-29_09-24-32/: image_analysis.md  site.md  validation.md
output_examples/-0.4962_-54.2453_Piquiatuba-Levee-Village-Site_2025-05-29_19-22-25/: image_analysis.md  prompt_log.md  report.md  site.md  validation.md
output_examples/-12.08016875_-53.83126926_Potential-Pre-Columbian-Settlement-near-Upper-Xingu-River-Basin_2025-06-13_23-21-00/: image_analysis.md  known_sites_check.md  prompt_log.md  report.md  site.md  validation.md
output_examples/-2.47_-56.25_New-Terra-Grande-Earthwork-Complex_2025-05-31_12-19-17/: image_analysis.md  prompt_log.md  report.md  site.md  validation.md
output_examples/-2.5023_-54.6931_Maicá-Ring-Ditch-Cluster_2025-05-29_09-24-32/: report.md
output_examples/-3.5_-55.5_Tucumã-Site,-Western-Pará_2025-05-30_09-25-25/: image_analysis.md  prompt_log.md  report.md  site.md  validation.md
src/remote_sensing_flow/: constants.py  helpers.py  main.py  models.py  tasks.py
src/remote_sensing_flow/tools/: lidar_data.py  search.py  sentinel_hub_png.py
